@@ -32,14 +32,17 @@ m_muttalias_query()
 
 	if [ -f "$file" ]
 	then
+	    # sed Regexps:
+	    # 1. alias nick Foo Bar <foo@example.com>
+	    # 2. alias nick foo@example.com (Foo Bar)
+	    # 3. alias nick <foo@example.com> (Foo Bar)
 	    grep -ia "$@" $file \
 	    | grep -a '^alias[ 	][ 	]*[^,][^,]*[ 	][ 	]*\([^,]\|\\\".*\\\"\)*$' \
-	    | sed -e 's/^alias[ 	][ 	]*\([^ 	][^ 	]*\)[ 	][ 	]*<\([^ 	>][^ 	>]*\)>[ 	][ 	]*(\([^<>()]*\))[^()<>]*$/\2	\3	alias \1/' \
-		  -e 's/^alias[ 	][ 	]*\([^ 	][^ 	]*\)[ 	][ 	]*\(\\\".*\\\"[^<>()]*\|[^<>()]*\)<\([^<>()]*\)>[^<>]*$/\3	\2	alias \1/' \
-	          -e 's/^alias[ 	][ 	]*\([^ 	][^ 	]*\)[ 	][ 	]*\([^<>()]*\)(\(\\\".*\\\"[^<>()]*\|[^<>()]*\))[^()<>]*$/\2	\3	alias \1/' \
-		  -e 's/\\\"//g' \
+	    | sed -E -e 's/^alias[[:blank:]]+([^[:blank:]]+)[[:blank:]]+("[^"]+"|[^<>()]+)[[:blank:]]+<([^<>()]+)>.*$/\3	\2	alias \1/' \
+		     -e 's/^alias[[:blank:]]+([^[:blank:]]+)[[:blank:]]+([^<>()]+)[[:blank:]]+\(([^()<>]+)\).*$/\2	\3	alias \1/' \
+		     -e 's/^alias[[:blank:]]+([^[:blank:]]+)[[:blank:]]+<([^<>()]+)>[[:blank:]]+\(([^()<>]+)\).*$/\2	\3	alias \1/' \
+		     -e 's/"//g' \
 	    | grep -va '^alias[ 	][ 	]*[^,][^,]*[ 	][ 	]*[^,]*$' || :
 	fi  
     done
 }
-
